Fix Java 11 compatibility issues: replace .toList() with .collect(Collectors.toList())